# Finance_Dashboard

./: .env  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  NEXTJS_DEPLOYMENT_GUIDE.md  deploy.bat  deploy.sh  dev-setup.sh  docker-compose.dev.yml
.github/workflows/: ci-cd.yml
BACKEND/: .dockerignore  .env  Dockerfile  Dockerfile.simple  Procfile  config.py  docker-compose.yml  env.example  main.py  pyproject.toml  railway.toml  requirements.txt  start.py  start.sh
BACKEND/models/: __init__.py  stock.py
BACKEND/routers/: company.py  investor.py  news.py  stock.py
BACKEND/services/: company_service.py  investor_service.py  news_service.py  stock_service.py
BACKEND/utils/: __init__.py  data_processor.py  database.py  selenium_utils.py
FRONTEND/: env.production  jest.setup.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
FRONTEND/public/: manifest.json
FRONTEND/src/: App.css  App.jsx  CompanyDetail.jsx  CompareChart.jsx  Dashboard.jsx  PieChart.jsx  SalesTable.jsx  Sidebar.jsx  TopRankings.jsx  TreasureHunt.jsx  investorTable.jsx
FRONTEND/src/app/: globals.css  layout.tsx  page.tsx
FRONTEND/src/components/: App.tsx  CompanyDetail.tsx  CompanySummary.tsx  CompareChart.tsx  Dashboard.tsx  FinancialGraph.tsx  GuidePopup.tsx  IndustryAnalysis.tsx  IndustryExplain.tsx  KospiChart.tsx  KospiInvestorChart.tsx  PieChart.tsx  SalesTable.tsx  ShareholderChart.tsx  Sidebar.tsx  TopRankings.tsx  TreasureHunt.tsx
FRONTEND/src/config/: __init__.js  api.js  api.ts
FRONTEND/src/stores/: useAppStore.ts
코드/: plotly_내수.ipynb  plotly_매출.ipynb  주주.ipynb
(+6 files in other folders)
