[tool.poetry]
name = "finance-dashboard-backend"
version = "0.1.0"
description = "Finance Dashboard Backend API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pykrx = "^1.0.40"
yfinance = "^0.2.33"
pandas = "^2.1.3"
selenium = "^4.15.2"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
pymongo = "^4.6.0"
requests = "^2.31.0"
webdriver-manager = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
