[tool.poetry]
name = "finance-dashboard-backend"
version = "0.1.0"
description = "Finance Dashboard Backend API"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "**/*.py" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pykrx = "^1.0.51"
yfinance = "^0.2.65"
pandas = "^2.1.3"
selenium = "^4.35.0"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.1.1"
pymongo = "^4.14.0"
requests = "^2.31.0"
webdriver-manager = "^4.0.2"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"